# seafovl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  seafovl.cabal
assets/: ins.fa  ins_prot.fa  pol.fa  pol_part.fa
assets/matrix_diagram/: matrix.domain  nw_dist.style  nw_dist.substance  nw_dist_partial.substance  nw_order_of_calculations.style  nw_order_of_calculations.substance  nw_order_of_calculations_partial.substance  nw_steps.style  nw_steps.substance  nw_steps_partial.substance
assets/pandoc/: defaults.yaml  ghci.xml
assets/pandoc/citations/: citations.bib
assets/pandoc/filters/: annotate.py  code-format.py  diagram.lua
assets/pandoc/syntax/: cabal.xml  ghci.xml  terminal.xml
assets/pandoc/tex/: arrows.tex  centered_figs.tex  colored_admonitions.tex  deep_bullet_lists.tex  eq_numbering_per_sec.tex  fancy_header.tex  footnotes_link_back.tex  htwgreen.tex  soft_wrapped_code.tex  start_ch_on_new_pg.tex
assets/pandoc/yaml/: a4.yaml  code.yaml  colored_admonitions.yaml  figures.yaml  font.yaml  includes.yaml  linked_refs.yaml  links.yaml  numbered_eqs.yaml  toc.yaml
assets/profiling/: .gitignore  aln_timing_ins.csv  aln_timing_pol.csv  pol_100.hc.eventlog  pol_100.hy.eventlog  pol_125.hc.eventlog  pol_125.hy.eventlog
assets/scripts/: generate_diagram_boilerplate.py  profile_aligner.py
docs/: 01_Einleitung.md  02_Material_und_Methoden.md  03_Durchfuehrung_und_Ergebnisse.md  04_Diskussion.md  05_Fazit.md  bachelors_thesis.md  title.tex
docs/results/: 01_PSA_als_MILP.md  02_MILP_loesen.md  03_Implementation.md  04_Verifikation.md
