cabal-version:      3.4

name:               seafovl
author:             Fynn Freyer
synopsis:           SEquence Aligner with Formally Verified Logic
description:        Seafovl (sˈiːfa͡ʊl) is a formally verified sequence aligner, that I wrote for my bachelors thesis "Implementing a Verifiable Pair-wise Sequence Alignment Model based on Mixed Integer Optimization." Although it uses the classical Needleman-Wunsch algorithm, in the thesis I proved that Needleman-Wunsch maximizes the stated MILP. Do not use this, because the performance sucks.

license:            MIT
license-file:       LICENSE
copyright:          Copyright 2024 Fynn Freyer

-- Package version conforms to https://pvp.haskell.org
--       +-+------- breaking API changes
--       | | +----- non-breaking API additions
--       | | | +--- code changes with no API change
version: 0.1.0.0
maintainer:         fynn.freyer@student.htw-berlin.de

category:           Data
build-type:         Simple

extra-doc-files:    README.md,
                    CHANGELOG.md

common common-options
    default-language: Haskell2010
    ghc-options: -Wall -O
    ghc-prof-options: -fprof-callers=Align.*

library
    import:           common-options
        
    exposed-modules:  Align,
                      Align.Data,
                      Align.Naive,
                      Align.Naive.Data,

    build-depends:    base   ^>=4.17.1.0,
                      array  ^>=0.5,
                      matrix ^>=0.3

    hs-source-dirs:   src

executable seafovl
    import:           common-options

    main-is:          Main.hs

    build-depends:    base   ^>=4.17.1.0,
                      fasta  ^>=0.10,
                      seafovl

    hs-source-dirs:   app
